사용자가 폴더를 조회하는 기능 구현 (#29)